--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,9 @@
     scroll-behavior: smooth;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply flex items-center justify-center h-screen w-full overflow-hidden;
+  }
+  main {
+    @apply md:h-[calc(100dvh-10%)] md:w-[calc(100dvw-5%)] h-[calc(100dvh-4%)] w-[calc(100dvw-5%)] bg-background backdrop-blur rounded-lg overflow-hidden border relative z-50 transition-all;
   }
 }
