--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,4 +59,32 @@
   main {
     @apply md:h-[calc(100dvh-10%)] md:w-[calc(100dvw-5%)] h-[calc(100dvh-4%)] w-[calc(100dvw-5%)] bg-background backdrop-blur rounded-lg overflow-hidden border relative z-50 transition-all;
   }
+
+  code {
+    counter-reset: line;
+  }
+  code > [data-line]::before {
+    counter-increment: line;
+    content: counter(line);
+    display: inline-block;
+    width: 1rem;
+    margin-right: 2rem;
+    text-align: right;
+    color: gray;
+  }
+  code[data-line-numbers-max-digits="2"] > [data-line]::before {
+    width: 2rem;
+  }
+  code[data-line-numbers-max-digits="3"] > [data-line]::before {
+    width: 3rem;
+  }
+  html.light {
+    @apply bg-gray-100;
+  }
+  html.light [data-theme="dark"] {
+    display: none;
+  }
+  html.dark [data-theme="light"] {
+    display: none;
+  }
 }
